--- a/APIFramework/test-output/old/Suite/methods-alphabetical.html
+++ b/APIFramework/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a069a6">  <td>22/12/28 11:08:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC1_PostRequest.testcase1()[pri:0, instance:org.testing.TestCases.TC1_PostRequest@6bdf28bb]">testcase1</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="c1af68">  <td>22/12/28 11:09:14</td>   <td>15421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC10_DeleteRequest.testcase10()[pri:0, instance:org.testing.TestCases.TC10_DeleteRequest@7c30a502]">testcase10</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="f09bb1">  <td>22/12/28 11:09:03</td>   <td>4749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC2_GetAllRequest.testcase2()[pri:0, instance:org.testing.TestCases.TC2_GetAllRequest@e580929]">testcase2</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="6de788">  <td>22/12/28 11:09:04</td>   <td>5583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3GetParticularRecord.testcase3()[pri:0, instance:org.testing.TestCases.TC3GetParticularRecord@1cd072a9]">testcase3</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="618e91">  <td>22/12/28 11:09:05</td>   <td>6313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC4_PutRequest.testcase4()[pri:0, instance:org.testing.TestCases.TC4_PutRequest@7c75222b]">testcase4</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="a98982">  <td>22/12/28 11:09:06</td>   <td>7816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC5_DeleteRequest.testcase5()[pri:0, instance:org.testing.TestCases.TC5_DeleteRequest@4c203ea1]">testcase5</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="f2a7d5">  <td>22/12/28 11:09:08</td>   <td>9323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC6_PostRequest2.testcase6()[pri:0, instance:org.testing.TestCases.TC6_PostRequest2@27f674d]">testcase6</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="fbaa64">  <td>22/12/28 11:09:09</td>   <td>10723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC7_GetAllRequest.testcase7()[pri:0, instance:org.testing.TestCases.TC7_GetAllRequest@1d251891]">testcase7</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="a7ac6c">  <td>22/12/28 11:09:11</td>   <td>11854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC8_GetParticularRecord.testcase8()[pri:0, instance:org.testing.TestCases.TC8_GetParticularRecord@48140564]">testcase8</td> 
-  <td>main@895947612</td>   <td></td> </tr>
-<tr bgcolor="6995df">  <td>22/12/28 11:09:13</td>   <td>14116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC9_PutRequest2.testcase9()[pri:0, instance:org.testing.TestCases.TC9_PutRequest2@58ceff1]">testcase9</td> 
-  <td>main@895947612</td>   <td></td> </tr>
+<tr bgcolor="6461b3">  <td>23/01/28 10:55:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC1_PostRequest.testcase1()[pri:0, instance:org.testing.TestCases.TC1_PostRequest@13e39c73]">testcase1</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="a5fe93">  <td>23/01/28 10:55:55</td>   <td>12752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC10_DeleteRequest.testcase10()[pri:0, instance:org.testing.TestCases.TC10_DeleteRequest@1139b2f3]">testcase10</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="96a0d5">  <td>23/01/28 10:55:47</td>   <td>4611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC2_GetAllRequest.testcase2()[pri:0, instance:org.testing.TestCases.TC2_GetAllRequest@1700915]">testcase2</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="95d394">  <td>23/01/28 10:55:49</td>   <td>6423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC3GetParticularRecord.testcase3()[pri:0, instance:org.testing.TestCases.TC3GetParticularRecord@21de60b4]">testcase3</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="beb86c">  <td>23/01/28 10:55:51</td>   <td>8280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC4_PutRequest.testcase4()[pri:0, instance:org.testing.TestCases.TC4_PutRequest@c267ef4]">testcase4</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="7c8ad9">  <td>23/01/28 10:55:52</td>   <td>9396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC5_DeleteRequest.testcase5()[pri:0, instance:org.testing.TestCases.TC5_DeleteRequest@30ee2816]">testcase5</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="6aaeab">  <td>23/01/28 10:55:53</td>   <td>10616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC6_PostRequest2.testcase6()[pri:0, instance:org.testing.TestCases.TC6_PostRequest2@31d7b7bf]">testcase6</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="8f8cc1">  <td>23/01/28 10:55:54</td>   <td>11382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC7_GetAllRequest.testcase7()[pri:0, instance:org.testing.TestCases.TC7_GetAllRequest@635eaaf1]">testcase7</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="679870">  <td>23/01/28 10:55:54</td>   <td>11664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC8_GetParticularRecord.testcase8()[pri:0, instance:org.testing.TestCases.TC8_GetParticularRecord@5c30a9b0]">testcase8</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="8cf7ab">  <td>23/01/28 10:55:54</td>   <td>12017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC9_PutRequest2.testcase9()[pri:0, instance:org.testing.TestCases.TC9_PutRequest2@1ddf84b8]">testcase9</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
 </table>
